Introduce admin dashboards, achievements and profile screens across platforms, and refactor admin user initialization

--- a/composeApp/src/androidMain/AndroidManifest.xml
+++ b/composeApp/src/androidMain/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <application
         android:name=".FunnyEnglishApplication"
         android:allowBackup="true"
+        android:usesCleartextTraffic="${usesCleartextTraffic}"
         android:label="FunnyEnglish"
         android:supportsRtl="true"
         android:theme="@style/Theme.FunnyEnglish">
