--- a/docker/.env.example
+++ b/docker/.env.example
@@ -11,6 +11,11 @@ S3_BUCKET=funnyenglish
 # JWT
 JWT_SECRET=your-very-long-secret-key-at-least-256-bits
 
+# Admin user (created on backend startup)
+ADMIN_EMAIL=admin@funnyenglish.app
+ADMIN_PASSWORD=change-me
+ADMIN_DISPLAY_NAME=Admin
+
 # OAuth (optional)
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
