--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -67,6 +67,11 @@ app:
   cors:
     allowed-origins: ${CORS_ORIGINS:http://localhost:3000,http://localhost:5173}
 
+  admin:
+    email: ${ADMIN_EMAIL:admin@funnyenglish.app}
+    password: ${ADMIN_PASSWORD:}
+    display-name: ${ADMIN_DISPLAY_NAME:Admin}
+
 logging:
   level:
     com.funnyenglish: DEBUG
